Fixes issue with installing starter kits in the back office after upgrading the installer to install the starter kits properly. Not sure if this was actually working before 4.10 but in any case does work again now and installs them the correct way whilst waiting for the app pool to restart (we need to put this in place for the normal packages too!). Upgraded the StarterKits.aspx to have the correct code behind structure. Fixes issue with missing or invalid referenced images.

--- a/src/Umbraco.Web.UI/umbraco_client/Installer/css/all.css
+++ b/src/Umbraco.Web.UI/umbraco_client/Installer/css/all.css
@@ -89,7 +89,7 @@ figure{display: block;}
 
 .bg-main .color3 .bg-c { background:url(../images/bg-blog.jpg) no-repeat 50% 0;}
 /* Color 4 */
-.bg-main .color4 { background:#201c01 url(../images/bg-bhuiness-repeat.jpg) repeat-x;}
+.bg-main .color4 { background:#201c01 url(../images/bg-normal-repeat.jpg) repeat-x;}
 
 .bg-main .color4 .bg-c { background:url(../images/bg-bhuiness.jpg) no-repeat 50% 0;}
 /* Color 5 */
